--- a/upload/include/admin/templates/archiv/downloads.htm
+++ b/upload/include/admin/templates/archiv/downloads.htm
@@ -107,7 +107,12 @@
                     </tr>
                     <tr>
                         <td class="Cmite">Text lang</td>
-                        <td class="Cnorm"><textarea cols="47" rows="3" name="descl">{descl}</textarea></td>
+                        <td class="Cnorm">
+                            <!-- BB Code START -->
+                            {__BBCodeButtons__}<br />
+                            <!-- BB Code ENDE -->
+                            <textarea cols="70" rows="5" name="txt">{descl}</textarea>
+                        </td>
                     </tr>
                     <tr class="Cdark">
                         <td></td>
