--- a/upload/include/admin/templates/archiv/downloads.htm
+++ b/upload/include/admin/templates/archiv/downloads.htm
@@ -1,118 +1,170 @@
-<table cellpadding="0" cellspacing="0" border="0"><tr><td><img src="include/images/icons/admin/downloads.png" /></td><td width="30"></td><td valign="bottom"><h1>Downloads</h1></td></tr></table>
+<table cellpadding="0" cellspacing="0" border="0">
+    <tr>
+        <td>
+            <img src="include/images/icons/admin/downloads.png" />
+        </td>
+        <td width="30"></td>
+        <td valign="bottom">
+            <h1>Downloads</h1>
+        </td>
+    </tr>
+</table>
 
 <table width="100%">
-  <tr>
-	  <td valign="top" width="60%">
+    <tr>
+        <td valign="top" width="60%">
 
-<table cellpadding="3" border="0" cellspacing="1" class="border">
-  <tr class="Chead">
-		<td><b>Name</b></td>
+            <table cellpadding="3" border="0" cellspacing="1" class="border">
+                <tr class="Chead">
+                    <td colspan="6"><b>Downloads</b></td>
+                </tr>
+                {EXPLODE}
+                <tr class="{class}">
+                    <td><img width="30" src="{surl}" /></td>
+                    <td>{name} {version}</td>
+                    <td><a href="?archiv-downloads-e{id}#edit"><img src="include/images/icons/edit.gif" border="0" title="&auml;ndern" alt="&auml;ndern"></a></td>
+                    <td><a href="javascript:del('{id}')"><img src="include/images/icons/del.gif" border="0" title="l&ouml;schen" alt="l&ouml;schen"></a></td>
+                    <td><a href="?archiv-downloads-S{cat}-o{id}-{pos}"><img src="include/images/icons/pfeilo.gif" border="0" title="oben" alt="oben"></a></td>
+                    <td><a href="?archiv-downloads-S{cat}-u{id}-{pos}"><img src="include/images/icons/pfeilu.gif" border="0" title="unten" alt="unten"></a></td>
+                </tr>
+                {EXPLODE}
+            </table>
+            <br />
 
-		<td></td>
-		<td></td>
-		<td></td>
-		<td></td>
-	</tr>
-{EXPLODE}
-  <tr class="{class}">
-	  <td>{name} {version}</td>
-		<td><a href="?archiv-downloads-e{id}#edit"><img src="include/images/icons/edit.gif" border="0" title="&auml;ndern" alt="&auml;ndern"></a></td>
-		<td><a href="javascript:del('{id}')"><img src="include/images/icons/del.gif" border="0" title="l&ouml;schen" alt="l&ouml;schen"></a></td>
-    <td><a href="?archiv-downloads-S{cat}-o{id}-{pos}"><img src="include/images/icons/pfeilo.gif" border="0" title="oben" alt="oben"></a></td>
-    <td><a href="?archiv-downloads-S{cat}-u{id}-{pos}"><img src="include/images/icons/pfeilu.gif" border="0" title="unten" alt="unten"></a></td>
-	</tr>
-{EXPLODE}
-</table>
-<br />
+        </td>
+        <td valign="top" width="40%">
+            <table cellpadding="3" border="0" cellspacing="1" class="border">
+                <tr class="Chead">
+                    <td colspan="6"><b>Kategorien</b></td>
+                </tr>
+                {frei}
+                <tr class="Cmite">
+                    <td colspan="2"><a href="?archiv-downloads-S0">Keine</a></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                {EXPLODE}
+            </table>
+            <br />
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a href="#" name="edit"></a>
 
-</td><td valign="top" width="40%">
-
-<table cellpadding="3" border="0" cellspacing="1" class="border">
-  <tr class="Chead">
-		<td colspan="5"><b>Kategorien</b></td>
-  </tr>{frei}<tr class="Cmite">
-    <td><a href="?archiv-downloads-S0">Keine</a></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>{EXPLODE}
-</table>
-<br />
-</td></tr><tr><td><a href="#" name="edit"></a>
-
-<form action="admin.php?archiv-downloads" method="POST" name="form">
+            <form action="admin.php?archiv-downloads" method="POST" name="form" enctype="multipart/form-data">
 	<input type="hidden" name="pkey" value="{pkey}">
 
-	<table class="border" cellpadding="3" cellspacing="1" border="0">
-    <tr class="Chead">
-		  <td colspan="2"><b>Downloads</b></td>
-		</tr><tr>
-      <td class="Cmite">Name</td>
-			<td class="Cnorm"><input type="text" name="name" value="{name}" /></td>
-    </tr><tr>
-      <td class="Cmite">Version</td>
-			<td class="Cnorm"><input type="text" name="version" value="{version}" /></td>
-    </tr><tr>
-      <td class="Cmite">Kategorie</td>
-			<td class="Cnorm"><select name="cat">{cat}</select></td>
-    </tr><tr>
-      <td class="Cmite">Autor</td>
-			<td class="Cnorm"><input type="text" name="creater" value="{creater}" /></td>
-    </tr><tr>
-      <td class="Cmite">Url</td>
-			<td class="Cnorm"><input type="text" size="35" name="newurl" value="{newurl}" />&nbsp;
-      <input type="button" value="Verwalten" title="Files verwalten" onClick="javascript:openFiles()" />
-      </td>
-    </tr><tr>
-      <td class="Cmite">Screenshot Url</td>
-			<td class="Cnorm"><input type="text" size="50" name="surl" value="{surl}" /></td>
-    </tr><tr>
-      <td class="Cmite">Vorschau Url</td>
-			<td class="Cnorm"><input type="text" size="50" name="ssurl" value="{ssurl}" /></td>
-    </tr><tr>
-      <td class="Cmite">Vorschau Text</td>
-			<td class="Cnorm"><input type="text" size="50" name="desc" value="{desc}" /></td>
-    </tr><tr>
-      <td class="Cmite">Text lang</td>
-			<td class="Cnorm"><textarea cols="47" rows="3" name="descl">{descl}</textarea></td>
+                <table class="border" cellpadding="3" cellspacing="1" border="0">
+                    <tr class="Chead">
+                        <td colspan="2"><b>Downloads</b></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Name</td>
+                        <td class="Cnorm"><input type="text" name="name" value="{name}" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Version</td>
+                        <td class="Cnorm"><input type="text" name="version" value="{version}" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Kategorie</td>
+                        <td class="Cnorm"><select name="cat">{cat}</select></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Autor</td>
+                        <td class="Cnorm"><input type="text" name="creater" value="{creater}" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Url</td>
+                        <td class="Cnorm">
+                            <input type="text" size="35" name="newurl" value="{newurl}" />&nbsp;
+                            <input type="button" value="Verwalten" title="Files verwalten" onClick="javascript:openFiles()" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Demo Url</td>
+                        <td class="Cnorm">
+                            <input type="text" size="50" name="demo" value="{demo}" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Screenshot Url</td>
+                        <td class="Cnorm">
+                            <input type="text" size="50" name="surl" value="{surl}" placeholder="URL oder Bild Hochladen" /><br />
+                            <input type="file" sitze="50" name="file" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Vorschau Url</td>
+                        <td class="Cnorm"><input type="text" size="50" name="ssurl" value="{ssurl}" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Vorschau Text</td>
+                        <td class="Cnorm"><input type="text" size="50" name="desc" value="{desc}" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Text lang</td>
+                        <td class="Cnorm">
+                            <!-- BB Code START -->
+                            {__BBCodeButtons__}<br />
+                            <!-- BB Code ENDE -->
+                            <textarea cols="70" rows="5" name="txt">{descl}</textarea>
+                        </td>
+                    </tr>
+                    <tr class="Cdark">
+                        <td></td>
+                        <td><input type="submit" value="Absenden" name="sub" />{datum}</td>
+                    </tr>
+                </table>
+            </form>
+
+        </td>
+        <td valign="top">
+
+            <form action="admin.php?archiv-downloads" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="Cpkey" value="{Cpkey}">
+
+                <table class="border" cellpadding="3" cellspacing="1" border="0">
+                    <tr class="Chead">
+                        <td colspan="2"><b>Download Kategorien</b></td>
+                    </tr>
+                    
+                    <tr>
+                        <td class="Cmite">Kategorie</td>
+                        <td class="Cnorm">
+                            <select name="Ccat">{Ccat}</select>
+                        </td>
+                    </tr>
+                    
+                    <tr>
+                        <td class="Cmite">Sichtbar ab</td>
+                        <td class="Cnorm"><select name="Crecht">{Crecht}</select></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Name</td>
+                        <td class="Cnorm"><input type="text" name="Cname" value="{Cname}" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Bild</td>
+                        <td class="Cnorm"><input type="file" name="file" /></td>
+                    </tr>
+                    <tr>
+                        <td class="Cmite">Text</td>
+                        <td class="Cnorm"><textarea cols="35" rows="3" name="Cdesc">{Cdesc}</textarea></td>
+                    </tr>
+                    <tr class="Cdark">
+                        <td></td>
+                        <td><input type="submit" value="Absenden" name="Csub" /></td>
+                    </tr>
+                </table>
+            </form>
+
+        </td>
     </tr>
-		<tr class="Cdark">
-		  <td></td>
-			<td><input type="submit" value="Absenden" name="sub" />{datum}</td>
-		</tr>
-  </table>
-</form>
-
-</td><td valign="top">
-
-<form action="admin.php?archiv-downloads" method="POST">
-	<input type="hidden" name="Cpkey" value="{Cpkey}">
-
-	<table class="border" cellpadding="3" cellspacing="1" border="0">
-    <tr class="Chead">
-		  <td colspan="2"><b>Download Kategorien</b></td>
-		</tr>
-      <td class="Cmite">Kategorie</td>
-			<td class="Cnorm"><select name="Ccat">{Ccat}</select></td>
-    </tr></tr>
-      <td class="Cmite">Sichtbar ab</td>
-			<td class="Cnorm"><select name="Crecht">{Crecht}</select></td>
-    </tr><tr>
-      <td class="Cmite">Name</td>
-			<td class="Cnorm"><input type="text" name="Cname" value="{Cname}" /></td>
-    </tr><tr>
-      <td class="Cmite">Text</td>
-			<td class="Cnorm"><textarea cols="35" rows="3" name="Cdesc">{Cdesc}</textarea></td>
-    </tr>
-		<tr class="Cdark">
-		  <td></td>
-			<td><input type="submit" value="Absenden" name="Csub" /></td>
-		</tr>
-  </table>
-</form>
-
-</td></td></table>
+</table>
 <script language="JavaScript" type="text/javascript">
 <!--
   function openFiles () {
