--- a/upload/include/templates/downloads.htm
+++ b/upload/include/templates/downloads.htm
@@ -31,7 +31,7 @@
 <table width="100%" border="0" cellspacing="1" cellpadding="3">
 {EXPLODE}
 {footer3}
-<td width="33%" align="center" style="border:1px solid #272727;">
+<td width="33%" align="center" class="border">
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>        
             <td width="70" height="60" align="center" class="hdbgpic" >
@@ -41,7 +41,7 @@
                     </span>
                 </a>
             </td>
-            <td height="60" class="Cnorm"><div class="hdbgname"><a class="hdbgtitel1" href="index.php?downloads-show-{id}">{name}</a></div>
+            <td height="60" class="Cnorm"><div class="hdbgdark"><a class="hdbgtitel1" href="index.php?downloads-show-{id}">{name}</a></div>
                 <span class="hdbgfont">Download wurde am <b><span style="color: #f00;">{datum}</span></b> hingef&uuml;gt.</span><br />
                 <span class="hdbgfont">Diese Datei wurde bereits <b><span style="color: #f00;">{downs}</span></b> mal heruntergeladen.</span><br /><br />
                 
