--- a/upload/include/templates/downloads_show.htm
+++ b/upload/include/templates/downloads_show.htm
@@ -43,9 +43,9 @@
             <td width="100%" valign="middle" class="hdbgmite" colspan="3">
                 <table width="100%" border="0" cellspacing="1" cellpadding="0" class="border">
                     <tr>
-                        <td width="33%" align="center" style="text-align:center;" class="hdbgdarkmite" height="40px">{downlink}</td>
-                        <td width="33%" align="center" style="text-align:center;" class="hdbgdarkmite" height="40px" >{surl}</td>
-                        <td width="33%" align="center" style="text-align:center;" class="hdbgdarkmite" height="40px">{demo}</td>
+                        <td width="33%" align="center" style="text-align:center;" class="hdbgdarkmite">{downlink}</td>
+                        <td width="33%" align="center" style="text-align:center;" class="hdbgdarkmite">{surl}</td>
+                        <td width="33%" align="center" style="text-align:center;" class="hdbgdarkmite">{demo}</td>
                     </tr>
                 </table>
             </td>
