--- a/upload/include/includes/css/downloads/downloads.css
+++ b/upload/include/includes/css/downloads/downloads.css
@@ -1,5 +1,5 @@
 /*  =========================================================
-Datei: boxen.css
+Datei: downloads.css
 Datum: 2014-10-03
 Autor: Wille.G (H0walD)
 Copyright: by www.howald-design.ch
@@ -199,26 +199,12 @@ a.hdbgtooltip span
 	background-color: #CCC;
 	background-image: url("/include/images/downloads/pattern.png");
   	background-repeat: repeat-x, repeat-y; 
-	position: absolute
+	border:1px solid #272727;
 	margin:0;
 	height:auto;
 	padding:1px;
 }
 
-.hdbgname{
-	width: 100%;
-	height: 30px;
-	margin: 0;
-	background-color: rgba(102, 102, 102, 0.7);
-	background: rgba(102, 102, 102, 0.7);
-	color: rgba(102, 102, 102, 0.7);
-	-webkit-box-shadow: 6px 6px 5px 0px rgba(0,0,0,0.5);
-	-moz-box-shadow: 6px 6px 5px 0px rgba(0,0,0,0.5);
-	box-shadow: 6px 6px 5px 0px rgba(0,0,0,0.5);
-	-moz-box-shadow:inset 0px 1px 21px #000000;
-	-webkit-box-shadow:inset 0px 1px 21px #000000;
-	box-shadow:inset 0px 1px 21px #000000;
-}	
 .hdbgfont{
 	text-align: left;
 	line-height:17px !important;
@@ -235,17 +221,17 @@ a.hdbgtooltip span
 	font-weight:bold;
 	text-indent: 0px;
 	line-height: 30px;
-	color: rgba(255,255,255,1.0);
-	text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
+	color: rgba(0,0,0,1.0);
+	text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);
 }
 .hdbgtitel1:hover{
-	font: 18px Ubuntu;
+	font: 16px Ubuntu;
 	padding-left: 10px;
 	font-weight:bold;
 	text-indent: 0px;
-	line-height: 25px;
-	color: rgba(255,255,255,1.0);
-	text-shadow: 2px 2px 2px rgba(0,0,0,0.8);
+	line-height: 30px;
+	color: rgba(0,0,0,0.75);
+	text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);
 }
 
 .hdbgposi{
@@ -260,18 +246,22 @@ a.hdbgtooltip span
 
 .hdbgdark {
 	border:1px solid #272727;
-	background-image: url("/include/images/downloads/pattern.png");
-  	background-repeat: repeat-x, repeat-y;
-	background-color: rgba(102, 102, 102, 0.7);
+	background-color:#f5f5f5;
+	background-image:-moz-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+	background-image:-webkit-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image:-o-linear-gradient(top, #ffffff, #e6e6e6);
+	background-image:linear-gradient(to bottom, #ffffff, #e6e6e6);
+	background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
 	font: 18px Ubuntu;
 	font-weight: bold;
 	text-indent: 10px;
-	color: rgba(255,255,255,1.0);
-	text-shadow: 2px 2px 2px rgba(0,0,0,1.0);
+	color: rgba(0,0,0,1.0);
+	text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);
 	-moz-box-shadow:inset 1px 0px 16px #000000;
 	-webkit-box-shadow:inset 1px 0px 16px #000000;
 	box-shadow:inset 1px 0px 16px #000000;
-	height:35px;
+	height:30px;
 	line-height:30px !important; 
 	 } 
 	 
@@ -299,8 +289,23 @@ a.hdbgtooltip span
 	
 .btn-large {
 	padding: 6px 13px !important;
+	font: 16px Ubuntu !important;
 }
 
 .btn-large:hover,.btn:focus{
 	font: 16px Ubuntu !important;
 	}
+	
+.btn {
+	padding: 6px 13px !important;
+	font: 16px Ubuntu !important;
+}
+
+.btn:hover,.btn:focus{
+	font: 16px Ubuntu !important;
+	}
+	
+.border {
+background-color: #585858;
+border:1px solid #272727;
+}
