--- a/upload/include/templates/downloads_show.htm
+++ b/upload/include/templates/downloads_show.htm
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/include/includes/css/downloads/downloads.css">
-
-<center>
+<script type="text/javascript" src="/include/includes/css/downloads/screen.js"></script>
+<center> <a name="download-{id}"></a>
     <table width="90%" cellspacing="1" cellpadding="0" align="center" class="border">
         <tr>
             <td colspan="3" class="hdbgdark" >{name}</td>
