--- a/upload/include/templates/downloads.htm
+++ b/upload/include/templates/downloads.htm
@@ -56,5 +56,21 @@
 <div class="hdbgcopy">Copyright &copy; 2014 Downloadansicht by <a  href="http://www.howald-design.ch" class="hdbglink" target="_blank">H0walD-Design</a></div>
 <link rel="stylesheet" type="text/css" href="/include/includes/css/downloads/downloads.css">
 {EXPLODE}
+<p></p><p></p>
+<form action="index.php?downloads-upload" method="POST" enctype="multipart/form-data">
+  <fieldset>
+    <legend><b>{_lang_fileup}</b></legend>
+	  <label style="width:100px; float:left;">{_lang_name}</label><input type="text" name="name" maxlength="50" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_version}</label><input type="text" name="version" maxlength="10" size="11" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_author}</label><input type="text" name="autor" maxlength="50" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_linkor}</label><input type="text" name="url" size="40" maxlength="100" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_upload}</label><input type="file" name="file" size="28" /><br />
+	  <label style="width:100px; float:left;">{_lang_demolink}</label><input type="text" name="surl" size="40" maxlength="100" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_preview}</label><input type="text" name="ssurl" size="40" maxlength="100" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_shortdesc}</label><input type="text" name="desc" size="40" maxlength="100" value="" /><br />
+	  <label style="width:100px; float:left;">{_lang_desc}</label><textarea cols="40" rows="4" name="descl"></textarea><br />
+	  <label style="width:100px; float:left;"></label><input type="submit" value="Absenden" name="sub"><br />
+  </fieldset>
+</form>
 
 
