--- a/upload/include/templates/downloads_show.htm
+++ b/upload/include/templates/downloads_show.htm
@@ -1,5 +1,6 @@
-<link rel="stylesheet" type="text/css" href="/include/includes/css/downloads/downloads.css">
-<script type="text/javascript" src="/include/includes/css/downloads/screen.js"></script>
+<link rel="stylesheet" type="text/css" href="include/includes/css/downloads/downloads.css">
+<link rel="stylesheet" type="text/css" href="include/includes/css/downloads/font-awesome.css">
+<script type="text/javascript" src="include/includes/css/downloads/screen.js"></script>
 <center> <a name="download-{id}"></a>
     <table width="90%" cellspacing="1" cellpadding="0" align="center" class="border">
         <tr>
@@ -20,6 +21,9 @@
                         <td width="20%" class="hdbgdarkmite"><b>{_lang_date}:</b></td>
                         <td width="80%" class="hdbgdarkmite">{datum}</td>
                     </tr>
+                    <tr>
+                        <td width="50%" colspan="2" style="text-align:left" class="hdbgdarkmite"><b>Download-Recht ab:</b></td>
+                    </tr>
                 </table>
             </td>
             <td width="50%" valign="top" class="hdbgmite">
@@ -35,6 +39,9 @@
                     <tr>
                         <td width="50%" class="hdbgdarkmite"><b>{_lang_seenfrom}:</b></td>
                         <td width="50%" class="hdbgdarkmite">{hits}</td>
+                    </tr>
+                    <tr>
+                        <td width="50%" colspan="2" style="text-align:left" class="hdbgdarkmite">{download_recht}</td>
                     </tr>
                 </table>
             </td>
